cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_01971_minecraft-server.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Minecraft Server on AWS EC2'
Resources:
  MinecraftKeyPair:
    Type: 'AWS::EC2::KeyPair'
    Properties:
      KeyName: MinecraftServerKey
      KeyType: rsa
      Tags:
        - Key: Purpose
          Value: MinecraftServer

  MinecraftSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Enable SSH and Minecraft server port'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 25565
          ToPort: 25565
          CidrIp: 0.0.0.0/0
  MinecraftServer:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t4g.small
      ImageId: ami-0b41017b456027579
      KeyName: !Ref MinecraftKeyPair
      SecurityGroups:
        - Ref: MinecraftSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          wget https://download.oracle.com/java/21/latest/jdk-21_linux-aarch64_bin.tar.gz
          sudo tar xvf jdk-21_linux-aarch64_bin.tar.gz -C /opt
          wget https://piston-data.mojang.com/v1/objects/4707d00eb834b446575d89a61a11b5d548d8c001/server.jar -O minecraft_server.jar
          echo 'eula=true' > eula.txt
          export JAVA_HOME=$(find /opt -type d -name "jdk*" -print -quit)
          echo 'export JAVA_HOME='$JAVA_HOME >> ~/.bashrc
          source ~/.bashrc

          cat <<EOF > /etc/systemd/system/minecraft.service
          [Unit]
          Description=Minecraft Server
          After=network.target

          [Service]
          User=root
          Nice=5
          KillMode=none
          SuccessExitStatus=0 1
          InaccessibleDirectories=/root /sys /srv /media -/lost+found
          NoNewPrivileges=true
          WorkingDirectory=/
          ExecStart=$JAVA_HOME/bin/java -Xmx1024M -Xms1024M -jar minecraft_server.jar nogui
          ExecStop=/bin/sh -c 'pkill -SIGINT -f "java.*minecraft_server.jar"'

          [Install]
          WantedBy=multi-user.target
          EOF
          systemctl daemon-reload
          systemctl enable minecraft.service
          systemctl start minecraft.service
